docs:#177 GC 대응 운영 문서 보강